--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -1,7 +1,7 @@
 <view class='container'>
-  <image class='avatar' src='/images/avatar.jpg' mode='scaleToFill'></image>
+  <image class='avatar' src='/images/avatar.png' mode='scaleToFill'></image>
   <text class='name'>Hello，gsp</text>
-  <view class='moto-container'>
-    <text class='moto'>点击我呀</text>
+  <view class='moto-container' catch:tap="open" id="555" data-hi="WeChat">
+    <text class='moto'>开启小程序之旅</text>
   </view>
 </view>
