--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -1,3 +1,19 @@
-<text>
-文章详情页面
-</text>
+<view class='container'>
+  <image class='head-image' src='/images/crap.jpg'></image>
+  <image class='music-image' src='/images/music-start.png'></image>
+  <view class='author-data'>
+    <image class='avatar' src='/images/avatar.png'></image>
+    <text class='author'>胡歌</text>
+    <text class='const-text'>发表于</text>
+    <text class='date'>三天前</text>
+  </view>
+  <text class='title'>炉石传说好玩吗</text>
+  <view class='tool'>
+    <view class='circle-img'>
+      <image class='collection-img' src='/images/collection.png'></image>
+      <image class='share-img' src='/images/share.png'></image>
+    </view>
+    <view class='line'></view>
+  </view>
+  <text class='detail'>炉石传说能不好玩吗，暴雪的游戏都很好玩炉石传说能不好玩吗，暴雪的游戏都很好玩炉石传说能不好玩吗，暴雪的游戏都很好玩</text>
+</view>
