--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -1,5 +1,5 @@
 @import "./movies-list/movies-list-template.wxss";
 
 .movies-container {
-  background-color: #ccc;
+  background-color: #f2f2f2;
 }
