--- a/pages/movies/movie-item/movie-item-template.wxml
+++ b/pages/movies/movie-item/movie-item-template.wxml
@@ -1,8 +1,8 @@
 <import src="../stars/stars-template.wxml" />
 <template name="movie-item">
   <view class='movie-container'>
-    <image class='movie-img' src='/images/crap.jpg'></image>
-    <text class='movie-title'>你的名字</text>
-    <template is="stars" />
+    <image class='movie-img' src="{{coverageUrl}}"></image>
+    <text class='movie-title'>{{title}}</text>
+    <template is="stars" data="{{average,stars}}" />
   </view>
 </template>
