--- a/pages/movies/movies-list/movies-list-template.wxml
+++ b/pages/movies/movies-list/movies-list-template.wxml
@@ -3,14 +3,14 @@
   <view class='movie-list-container'>
     <view class='movie-list-head'>
       <text class='slogan'>{{name}}</text>
-      <view class='more'>
+      <view class='more' bindtap='onMoreTap' data-title="{{name}}">
         <text class='more-text'>更多</text>
         <image class='more-img' src="/images/arrow-right.png"></image>
       </view>
     </view>
     <view class='movie-item-container'>
       <block wx:for="{{movies}}" wx:for-item="movie" wx:key="index">
-         <template is="movie-item" data="{{...movie}}" />  
+        <template is="movie-item" data="{{...movie}}" />
       </block>
     </view>
   </view>
