--- a/pages/movies/more-movies/more-movies.wxml
+++ b/pages/movies/more-movies/more-movies.wxml
@@ -1,2 +1,2 @@
 <import src="../movie-grid/movie-grid-template.wxml" />
-<template is="movie-grid" data="{{movies}}" />
+<template is="movie-grid" data="{{movies, threshold}}" />
