--- a/pages/movies/movie-item/movie-item-template.wxml
+++ b/pages/movies/movie-item/movie-item-template.wxml
@@ -1,6 +1,6 @@
 <import src="../stars/stars-template.wxml" />
 <template name="movie-item">
-  <view class='movie-container'>
+  <view class='movie-container' catchtap='onMovieItemTap' data-id="{{movieId}}" data-title="{{title}}">
     <image class='movie-img' src="{{coverageUrl}}"></image>
     <text class='movie-title'>{{title}}</text>
     <template is="stars" data="{{average,stars}}" />
