--- a/pages/movies/movie-detail/movie-detail.wxss
+++ b/pages/movies/movie-detail/movie-detail.wxss
@@ -1,3 +1,5 @@
+@import "../stars/stars-template.wxss";
+
 .container {
   display: flex;
   flex-direction: column;
@@ -6,4 +8,140 @@
 .head-img {
   width: 750rpx;
   height: 320rpx;
+  filter: blur(5px);
+}
+
+.head-img-hover {
+  width: 750rpx;
+  height: 320rpx;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-title {
+  font-size: 19px;
+  color: #fff;
+  font-weight: bold;
+  margin-top: 50rpx;
+  margin-left: 40rpx;
+  letter-spacing: 2rpx;
+}
+
+.sub-title {
+  font-size: 28rpx;
+  color: #fff;
+  font-weight: bold;
+  margin-top: 30rpx;
+  margin-left: 40rpx;
+}
+
+.like {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30rpx;
+  margin-left: 40rpx;
+}
+
+.highlight-font {
+  color: #f21146;
+  font-size: 22rpx;
+  margin-right: 10rpx;
+}
+
+.plain-font {
+  color: #666;
+  font-size: 22rpx;
+  margin-right: 30rpx;
+}
+
+.movie-img {
+  height: 238rpx;
+  width: 175rpx;
+  position: absolute;
+  top: 160rpx;
+  right: 30rpx;
+}
+
+.summary {
+  margin-left: 40rpx;
+  margin-top: 40rpx;
+  color: #777;
+}
+
+.origin-title {
+  color: #1f3463;
+  font-size: 26rpx;
+  font-weight: bold;
+  margin-bottom: 40rpx;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 15rpx;
+  font-size: 26rpx;
+}
+
+.mark {
+  margin-right: 30rpx;
+  white-space: nowrap;
+  color: #999;
+}
+
+.hr {
+  margin-top: 45rpx;
+  height: 1px;
+  width: 750rpx;
+  background-color: #d9d9d9;
+}
+
+.synopsis {
+  margin-left: 40rpx;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50rpx;
+  font-size: 26rpx;
+}
+
+.summary-content {
+  margin: 20rpx 40rpx 0 0;
+  line-height: 40rpx;
+  letter-spacing: 1px;
+  color: #d9d9d9;
+}
+
+.cast {
+  margin-left: 40rpx;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50rpx;
+  font-size: 26rpx;
+}
+
+.cast-imgs {
+  white-space: nowrap;
+}
+
+.cast-container {
+  display: inline-flex;
+  flex-direction: column;
+  margin-bottom: 50rpx;
+  margin-right: 40rpx;
+  width: 170rpx;
+  text-align: center;
+  white-space: normal;
+}
+
+.cast-img {
+  width: 170rpx;
+  height: 210rpx;
+}
+
+.cast-name {
+  margin: 10rpx auto 0;
+  word-break: keep-all;
+  font-size: 26rpx;
 }
